--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+server.port=10086
+
+hbase.config.hbase.zookeeper.quorum=127.0.0.1
+hbase.config.hbase.zookeeper.property.clientPort=2181
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
