--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ hbase.config.hbase.zookeeper.property.clientPort=2181
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+spring.data.mongodb.database=data-hub
