--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,17 @@
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
 
+		<!-- MongoDB ODM -->
 		<dependency>
 			<groupId>dev.morphia.morphia</groupId>
 			<artifactId>morphia-core</artifactId>
 			<version>2.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.8</version>
 		</dependency>
 
 		<dependency>
