--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,13 @@
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.9.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
